--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -23,12 +23,15 @@
         <variable
             name="viewModel"
             type="com.example.android.marsphotos.overview.OverviewViewModel" />
+        <variable
+            name="photo"
+            type="com.example.android.marsphotos.network.MarsPhoto" />
     </data>
     <ImageView
         android:id="@+id/mars_image"
         android:layout_width="wrap_content"
         android:layout_height="170dp"
-        imageUrl="@{viewModel.photos.imgSrcUrl}"
+        imageUrl="@{photo.imgSrcUrl}"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:padding="2dp"
