Add the binding adapter and connect the parts

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -42,6 +42,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:spanCount="2"
+            listData="@{viewModel.photos}"
+            android:clipToPadding="false"
             tools:itemCount="16"
             tools:listitem="@layout/grid_view_item" />
 
